kubernetes/apps/ai/speaches/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: speaches-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: speaches
  egress:
    - toFQDNs:
        - matchName: cas-server.xethub.hf.co
        - matchName: huggingface.co
        - matchName: transfer.xethub.hf.co
        - matchName: us.aws.cdn.hf.co
        - matchName: pypi.org
      toPorts:
        - ports:
            - port: "443"
